--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "d3-scale": "^2.1.2",
     "d3-scale-chromatic": "^1.5.0",
     "d3-selection": "^1.3.2",
+    "dot-prop": "^5.1.1",
     "eslint": "^4.18.2",
     "history": "^4.7.2",
     "js-yaml": "^3.13.1",
